2013-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/action_sequence_description.h:
	* src/model/action_sequence_log_parser.cpp:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/debug_message_window.cpp:
	- 行動列の長さとID列のカラムを追加

	* src/model/action_sequence_description.h:
	* src/model/action_sequence_log_parser.cpp:
	* src/model/action_sequence_log_parser.h:
	* src/model/main_data.cpp:
	* src/model/main_data.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_log_painter.cpp:
	* src/qt4/debug_log_painter.h:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- ActionSequenceSelector上で選択した行動列をフィールド上に描画する機能を実装

	* src/model/action_sequence_log_parser.cpp:
	- ActionStatePairノードのIDの読み取りに対応

2013-05-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- 統計情報をQLabelに表示するように変更

	* src/model/Makefile.am:
	* src/model/action_sequence_description.cpp:
	* src/model/action_sequence_description.h:
	* src/model/action_sequence_log_parser.cpp:
	* src/model/action_sequence_log_parser.h:
	* src/model/main_data.cpp:
	* src/model/main_data.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/evaluator_control_panel.cpp:
	* src/model/chain_action_data.cpp:
	* src/model/action_sequence_description.cpp:
	* src/model/chain_action_data.h:
	* src/model/action_sequence_description.h:
	* src/model/chain_action_log_parser.cpp:
	* src/model/action_sequence_log_parser.cpp:
	* src/model/chain_action_log_parser.h:
	* src/model/action_sequence_log_parser.h:
	- ChainをActionSequenceへリネーム
	- 行動列ビューでソートを有効化

	* src/model/chain_action_data.cpp:
	* src/model/chain_action_data.h:
	* src/model/chain_action_log_parser.cpp:
	* src/model/chain_action_log_parser.h:
	* src/qt4/action_sequence_selector.cpp:
	- 行動列ログパーサ周辺のコード整理

	* src/model/options.cpp:
	* src/model/options.h:
	* src/model/point.h:
	* src/qt4/ball_painter.cpp: